--- a/config/packages/doctrine_migrations.yaml
+++ b/config/packages/doctrine_migrations.yaml
@@ -2,5 +2,7 @@ doctrine_migrations:
     migrations_paths:
         # namespace is arbitrary but should be different from App\Migrations
         # as migrations classes should NOT be autoloaded
-        'DoctrineMigrations': '%kernel.project_dir%/migrations'
+        'DoctrineMigrations\before': '%kernel.project_dir%/migrations/before'
+        'DoctrineMigrations\after': '%kernel.project_dir%/migrations/after'
+        
     enable_profiler: false
